lib/src/bindings.dart


  late final _write_annotation_utf8_hrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.LongLong, ffi.LongLong,
              ffi.Pointer<ffi.Char>)>>('edfwrite_annotation_utf8_hr');
  late final _write_annotation_utf8_hr = _write_annotation_utf8_hrPtr
      .asFunction<int Function(int, int, int, ffi.Pointer<ffi.Char>)>();

  int write_annotation_utf8(
    int handle,
    int onset,
    int duration,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _write_annotation_utf8(
      handle,
      onset,
      duration,
      description,
    );
  }

  late final _write_annotation_utf8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.LongLong, ffi.LongLong,
              ffi.Pointer<ffi.Char>)>>('edfwrite_annotation_utf8');
  late final _write_annotation_utf8 = _write_annotation_utf8Ptr
      .asFunction<int Function(int, int, int, ffi.Pointer<ffi.Char>)>();

  /// Writes an annotation/event to the file.<br>
  /// This function is optional and can be called only after opening a file in writemode<br>
  /// and before closing the file.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] onset
  /// microseconds since start of recording.
  ///
  /// @param[in] duration
  /// microseconds, > 0 or -1 if not used.
  ///
  /// @param[in] description
  /// A null-terminated Latin1-string containing the text that describes the event.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int write_annotation_latin1_hr(
    int handle,
    int onset,
    int duration,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _write_annotation_latin1_hr(
      handle,
      onset,
      duration,
      description,
    );
  }

  late final _write_annotation_latin1_hrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.LongLong, ffi.LongLong,
              ffi.Pointer<ffi.Char>)>>('edfwrite_annotation_latin1_hr');
  late final _write_annotation_latin1_hr = _write_annotation_latin1_hrPtr
      .asFunction<int Function(int, int, int, ffi.Pointer<ffi.Char>)>();

  int write_annotation_latin1(
    int handle,
    int onset,
    int duration,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _write_annotation_latin1(
      handle,
      onset,
      duration,
      description,
    );
  }

  late final _write_annotation_latin1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.LongLong, ffi.LongLong,
              ffi.Pointer<ffi.Char>)>>('edfwrite_annotation_latin1');
  late final _write_annotation_latin1 = _write_annotation_latin1Ptr
      .asFunction<int Function(int, int, int, ffi.Pointer<ffi.Char>)>();

  /// Sets the datarecord duration. The default value is 1 second.<br>
  /// ATTENTION: the argument \p duration is expressed in units of 10 microseconds.<br>
  /// So, if you want to set the datarecord duration to 0.1 second, you must write a value of 10000.<br>
  /// The datarecord duration must be in the range 0.001 to 60 seconds.<br>
  /// This function can be used when you want to use a samplerate<br>
  /// which is not an integer. For example, if you want to use a samplerate of 0.5 Hz,<br>
  /// set the samplefrequency to 5 Hz and the datarecord duration to 10 seconds,<br>
  /// or set the samplefrequency to 1 Hz and the datarecord duration to 2 seconds.<br>
  /// This function is optional and can be called after opening a<br>
  /// file in writemode and before the first sample write action.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] duration
  /// Datarecord duration expressed in units of 10 microSecond.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_datarecord_duration(
    int handle,
    int duration,
  ) {
    return _set_datarecord_duration(
      handle,
      duration,
    );
  }

  late final _set_datarecord_durationPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'edf_set_datarecord_duration');
  late final _set_datarecord_duration =
      _set_datarecord_durationPtr.asFunction<int Function(int, int)>();

  /// Sets the datarecord duration to a very small value.<br>
  /// ATTENTION: the argument \p duration is expressed in units of 1 microSecond.<br>
  /// The datarecord duration must be in the range 1 to 9999 microseconds.<br>
  /// This function can be used when you want to use a very high samplerate.<br>
  /// For example, if you want to use a samplerate of 5 GHz,<br>
  /// set the samplefrequency to 5000 Hz and the datarecord duration to 1 micro-second.<br>
  /// Do not use this function if not necessary.<br>
  /// This function was added to accommodate for high speed ADC's e.g. Digital Sampling Oscilloscopes<br>
  /// This function is optional and can be called after opening a<br>
  /// file in writemode and before the first sample write action.
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] duration
  /// Datarecord duration expressed in units of 1 microSecond.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_micro_datarecord_duration(
    int handle,
    int duration,
  ) {
    return _set_micro_datarecord_duration(
      handle,
      duration,
    );
  }

  late final _set_micro_datarecord_durationPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'edf_set_micro_datarecord_duration');
  late final _set_micro_datarecord_duration =
      _set_micro_datarecord_durationPtr.asFunction<int Function(int, int)>();

  /// Sets the number of annotation signals. The default value is 1.<br>
  /// This function is optional and can be called only after opening a file in writemode<br>
  /// and before the first sample write action.<br>
  /// Normally you don't need to change the default value. Only when the number of annotations<br>
  /// you expect to write is more than the number of datarecords in the recording, you can use<br>
  /// this function to increase the storage space for annotations.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] annot_signals
  /// Number of annotation signals, must be in the range 1 - 64 inclusive.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_number_of_annotation_signals(
    int handle,
    int annot_signals,
  ) {
    return _set_number_of_annotation_signals(
      handle,
      annot_signals,
    );
  }

  late final _set_number_of_annotation_signalsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'edf_set_number_of_annotation_signals');
  late final _set_number_of_annotation_signals =
      _set_number_of_annotation_signalsPtr.asFunction<int Function(int, int)>();

  /// Sets the subsecond starttime expressed in units of 100 nanoseconds.<br>
  /// Valid range is 0 to 9999999 inclusive. Default is 0.<br>
  /// This function is optional and can be called only after opening a file in writemode<br>
  /// and before the first sample write action.<br>
  /// It is recommended to use a maximum resolution of not more than 100 microseconds.<br>
  /// E.g. use 1234000  to set a starttime offset of 0.1234 seconds (instead of for example 1234217).<br>
  /// In other words, leave the last 3 digits at zero.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] subsecond
  /// Subsecond starttime expressed in units of 100 nanoseconds.
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_subsecond_starttime(
    int handle,
    int subsecond,
  ) {
    return _set_subsecond_starttime(
      handle,
      subsecond,
    );
  }

  late final _set_subsecond_starttimePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'edf_set_subsecond_starttime');
  late final _set_subsecond_starttime =
      _set_subsecond_starttimePtr.asFunction<int Function(int, int)>();

  /// Sets the preferred position of the annotation channel(s) before, after or in the middle of the list<br>
  /// of regular signals. The default is to put them at the end (after the regular signals).<br>
  /// This function is optional and can be called only after opening a file in writemode<br>
  /// and before the first sample write action.<br>
  ///
  /// @param[in] handle
  /// File handle.
  ///
  /// @param[in] pos
  /// Preferred position of the annotation channel(s):<br>
  /// EDF_ANNOT_IDX_POS_START<br>
  /// EDF_ANNOT_IDX_POS_MIDDLE<br>
  /// EDF_ANNOT_IDX_POS_END<br>
  ///
  /// @return
  /// 0 on success, otherwise -1.<br>
  int set_annot_chan_idx_pos(
    int handle,
    int pos,
  ) {
    return _set_annot_chan_idx_pos(
      handle,
      pos,
    );
  }

  late final _set_annot_chan_idx_posPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'edf_set_annot_chan_idx_pos');
  late final _set_annot_chan_idx_pos =
      _set_annot_chan_idx_posPtr.asFunction<int Function(int, int)>();
}

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

enum idtype_t {
  P_ALL(0),
  P_PID(1),
  P_PGID(2);

  final int value;
  const idtype_t(this.value);

  static idtype_t fromValue(int value) => switch (value) {
        0 => P_ALL,
        1 => P_PID,
        2 => P_PGID,
        _ => throw ArgumentError("Unknown value for idtype_t: $value"),
      };
}

final class sigval extends ffi.Union {
  @ffi.Int()
  external int sival_int;

  external ffi.Pointer<ffi.Void> sival_ptr;
}

final class __sigaction_u extends ffi.Union {
  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>
      __sa_handler;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Int, ffi.Pointer<__siginfo>, ffi.Pointer<ffi.Void>)>>
      __sa_sigaction;
}

final class __siginfo extends ffi.Struct {
  @ffi.Int()
  external int si_signo;

  @ffi.Int()
  external int si_errno;

  @ffi.Int()
  external int si_code;

  @pid_t()
  external int si_pid;

  @uid_t()
  external int si_uid;

  @ffi.Int()
  external int si_status;

  external ffi.Pointer<ffi.Void> si_addr;

  external sigval si_value;

  @ffi.Long()
  external int si_band;

  @ffi.Array.multi([7])
  external ffi.Array<ffi.UnsignedLong> __pad;
}

typedef pid_t = __darwin_pid_t;
typedef __darwin_pid_t = __int32_t;
typedef __int32_t = ffi.Int;
typedef Dart__int32_t = int;
typedef uid_t = __darwin_uid_t;
typedef __darwin_uid_t = __uint32_t;
typedef __uint32_t = ffi.UnsignedInt;
typedef Dart__uint32_t = int;

final class wait extends ffi.Opaque {}

enum clockid_t {
  _CLOCK_REALTIME(0),
  _CLOCK_MONOTONIC(6),
  _CLOCK_MONOTONIC_RAW(4),
  _CLOCK_MONOTONIC_RAW_APPROX(5),
  _CLOCK_UPTIME_RAW(8),
  _CLOCK_UPTIME_RAW_APPROX(9),
  _CLOCK_PROCESS_CPUTIME_ID(12),
  _CLOCK_THREAD_CPUTIME_ID(16);

  final int value;
  const clockid_t(this.value);

  static clockid_t fromValue(int value) => switch (value) {
        0 => _CLOCK_REALTIME,
        6 => _CLOCK_MONOTONIC,
        4 => _CLOCK_MONOTONIC_RAW,
        5 => _CLOCK_MONOTONIC_RAW_APPROX,
        8 => _CLOCK_UPTIME_RAW,
        9 => _CLOCK_UPTIME_RAW_APPROX,
        12 => _CLOCK_PROCESS_CPUTIME_ID,
        16 => _CLOCK_THREAD_CPUTIME_ID,
        _ => throw ArgumentError("Unknown value for clockid_t: $value"),
      };
}

/// This structure contains the signal parameters.
final class EdfParam extends ffi.Struct {
  /// !< Label (name) of the signal, null-terminated string.
  @ffi.Array.multi([17])
  external ffi.Array<ffi.Char> label;

  /// !< Number of samples in the file.
  @ffi.LongLong()
  external int smp_in_file;

  /// !< Physical maximum, usually the maximum input of the ADC.
  @ffi.Double()
  external double phys_max;

  /// !< Physical minimum, usually the minimum input of the ADC.
  @ffi.Double()
  external double phys_min;
